# Beatris

./: README.md  jstris.py  optimize_constants.py  tetris_logic.pyd
tetris_logic/: .gitignore  Cargo.toml
tetris_logic/optimization/: moves-10-depth-2-numtrials-3-optrate-100-teststep-1-storedp-false.csv  test_results.txt
tetris_logic/src/: lib.rs  optimization.rs  tests.rs
tetris_logic/tetris_logic/: __init__.py  tetris_logic.cp37-win_amd64.pyd
